# datacenter_monitor_server

./: .gitignore  README.md  consumer.py  readme.md  requirements.txt  test_private_channel_consumer.py
.github/workflows/: build_images.yaml
consumer/: dockerfile  readme.md
consumer/app/: consumer.py
dashboard/: pyproject.toml  readme.md
dashboard/app/: __init__.py  app.py  config.py
dashboard/app/tailwind/: input.css  package-lock.json
dashboard/app/templates/: base.html
dashboard/app/templates/components/dashboard/: map.html  title.html
dashboard/app/templates/pages/: dashboard.html
dashboard/dashboard_app/: __init__.py  app.py  config.py
dashboard/dashboard_app/models/: datacenter_info.py  sensor.py  sensor_info.py
dashboard/dashboard_app/static/css/: build.css
dashboard/dashboard_app/tailwind/: readme.md
dashboard/dashboard_app/templates/: base.html
dashboard/dashboard_app/templates/components/dashboard/: map.html  sensor_charts.html  title.html
dashboard/dashboard_app/templates/components/layout/: footer.html  top_navbar.html
dashboard/dashboard_app/templates/pages/: dashboard.html
dashboard/sensor_dashboard/: app.py
data/: chart.py  get_and_chart_data.py
meshtastic/: README.md  create_test_channel.py  meshtastic_consumer.py
postgres/: dockerfile  readme.md
postgres/dev_data/: 99-dev-seed.sql
postgres/init_setup/: 01-permissions-setup.sql
postgres/post_setup/: init-user.sh
tests/: test_read_mqtt.py  test_write_postgres.py
